fix: JUnit methods usages are removed from production classes. Code is cleansed. macros-core-library dependency version is changed to 1.0.32.